# pallet_detection

./: .gitignore  Dockerfile  README.md  requirements.txt
docker_scripts/: devel.sh  enter_bash.sh  stop.sh
docker_scripts/bash_scripts/: devel.sh  start_pallet_detection.sh  start_pallet_segmentation.sh
docker_scripts/run_scripts/: run_pallet_detection.sh  run_pallet_segmentation.sh
workspace/pallet_detection/: CMakeLists.txt  package.xml
workspace/pallet_detection/pallet_detection/: SegForm.py  YOLOv8.py
workspace/pallet_detection/scripts/: image_publisher.py  image_subscriber.py  pallet_detection.py  pallet_detection_node.py  pallet_segmentation.py  pallet_segmentation_node.py
